; ModuleID = '/home/carl/AnghaBench/linux/drivers/s390/cio/extr_css.c_pimpampom_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/s390/cio/extr_css.c_pimpampom_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.subchannel = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.pmcw }
%struct.pmcw = type { i32, i32, i32 }

@.str = private unnamed_addr constant [16 x i8] c"%02x %02x %02x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @pimpampom_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pimpampom_show(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.subchannel*, align 8
  %8 = alloca %struct.pmcw*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load %struct.device*, %struct.device** %4, align 8
  %10 = call %struct.subchannel* @to_subchannel(%struct.device* %9)
  store %struct.subchannel* %10, %struct.subchannel** %7, align 8
  %11 = load %struct.subchannel*, %struct.subchannel** %7, align 8
  %12 = getelementptr inbounds %struct.subchannel, %struct.subchannel* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  store %struct.pmcw* %13, %struct.pmcw** %8, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load %struct.pmcw*, %struct.pmcw** %8, align 8
  %16 = getelementptr inbounds %struct.pmcw, %struct.pmcw* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.pmcw*, %struct.pmcw** %8, align 8
  %19 = getelementptr inbounds %struct.pmcw, %struct.pmcw* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.pmcw*, %struct.pmcw** %8, align 8
  %22 = getelementptr inbounds %struct.pmcw, %struct.pmcw* %21, i32 0, i32 2
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @sprintf(i8* %14, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %17, i32 %20, i32 %23)
  ret i32 %24
}

declare dso_local %struct.subchannel* @to_subchannel(%struct.device*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
